# robot-fleet-command-center

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: robots.yaml
src/fleet/: cli.py  config.py  executor.py  health.py  logging_config.py  orchestrator.py  reporting.py  telemetry.py
tests/: conftest.py  test_cli.py  test_config.py  test_executor.py  test_health.py  test_orchestrator.py  test_reporting.py  test_telemetry.py
